feat: Add markdown and math rendering support
Integrates `react-markdown`, `remark-math`, and `rehype-katex` to enable rendering markdown content with mathematical equations in the application. Updates dependencies and HTML structure to include necessary CSS and import maps. Modifies `ExamAnalysisView` and `StudentAnalysisView` to utilize the new `MarkdownRenderer` component for displaying question content. Updates mock API with more comprehensive high school math curriculum data.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EduScan Analysis Pro</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind with Typography Plugin -->
+    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+    <!-- KaTeX CSS for Math Rendering -->
+    <link rel="stylesheet" href="https://esm.sh/katex@0.16.9/dist/katex.min.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
       body {
         font-family: 'Inter', sans-serif;
+      }
+      /* Custom scrollbar for math content if needed */
+      .math-content {
+        overflow-x: auto;
       }
     </style>
   <script type="importmap">
@@ -17,7 +24,11 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.0"
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
+    "react-markdown": "https://esm.sh/react-markdown@9.0.1?bundle",
+    "remark-math": "https://esm.sh/remark-math@6.0.0?bundle",
+    "rehype-katex": "https://esm.sh/rehype-katex@7.0.0?bundle",
+    "clsx": "https://esm.sh/clsx@2.1.0"
   }
 }
 </script>
