--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduScan Analysis Pro</title>
+    <title>EduScan 智能阅卷分析系统</title>
     <!-- Tailwind with Typography Plugin -->
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
-    <!-- KaTeX CSS for Math Rendering -->
-    <link rel="stylesheet" href="https://esm.sh/katex@0.16.9/dist/katex.min.css">
+    <!-- KaTeX CSS for Math Rendering (Replaced with Staticfile CDN for China Mainland) -->
+    <link rel="stylesheet" href="https://cdn.staticfile.net/KaTeX/0.16.9/katex.min.css">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+      /* 使用系统默认字体栈，移除 Google Fonts 以提升国内加载速度 */
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "PingFang SC", "Microsoft YaHei", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       }
       /* Custom scrollbar for math content if needed */
       .math-content {
