feat: Update dependencies and build config
- Update React to v18 and related dependencies.
- Introduce Tailwind CSS and Lucide React.
- Configure Vite for better build and development experience.
- Adjust tsconfig.json for modern TypeScript features.
- Update import maps in index.html for CDN improvements.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EduScan 智能阅卷分析系统</title>
-    <!-- Tailwind with Typography Plugin -->
+    <!-- Tailwind with Typography Plugin (Using CDN for quick prototyping, for production consider local build) -->
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
-    <!-- KaTeX CSS for Math Rendering (Replaced with Staticfile CDN for China Mainland) -->
+    <!-- KaTeX CSS for Math Rendering (Domestic Mirror) -->
     <link rel="stylesheet" href="https://cdn.staticfile.net/KaTeX/0.16.9/katex.min.css">
     <style>
-      /* 使用系统默认字体栈，移除 Google Fonts 以提升国内加载速度 */
+      /* 使用系统默认字体栈 */
       body {
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "PingFang SC", "Microsoft YaHei", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
       }
-      /* Custom scrollbar for math content if needed */
       .math-content {
         overflow-x: auto;
       }
@@ -21,19 +20,22 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
-    "react-markdown": "https://esm.sh/react-markdown@9.0.1?bundle",
-    "remark-math": "https://esm.sh/remark-math@6.0.0?bundle",
-    "rehype-katex": "https://esm.sh/rehype-katex@7.0.0?bundle",
-    "clsx": "https://esm.sh/clsx@2.1.0"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "rehype-katex": "https://aistudiocdn.com/rehype-katex@^7.0.1",
+    "remark-math": "https://aistudiocdn.com/remark-math@^6.0.0"
   }
 }
 </script>
 </head>
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
+    <!-- Vite Entry Point -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
